--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <table cellspacing="20">
           <tr>
-            <td><img src="images/ayrton-modified.png" alt="Ayrton profile picture" width="150"></td>
+            <td><img src="ayrton-modified.png" alt="Ayrton profile picture" width="150"></td>
             <td> <h1> Ayrton Akinyemi </h1>
               <p> <em>Founder and CEO of <strong> <a href="https://appbrewery.com/">The App Brewery </a></strong>.</em></p>
               <p>First year student at University College London</p></td>
